Fixes #387 (Long directory names not visible in upload folder view)

--- a/src/Mvc/MvcTemplates/N2/Resources/Css/framed.css
+++ b/src/Mvc/MvcTemplates/N2/Resources/Css/framed.css
@@ -262,7 +262,8 @@ input.dp-applied {
         {
 	        display:block;
 	        overflow: hidden;
-			text-overflow:ellipsis;
+		text-overflow:ellipsis;
+		white-space: nowrap;
         }
     .droparea, .pickarea { margin:20px 0 0 0; padding:10px; border:dashed 1px silver; border-radius:3px; clear:both; opacity:.5; }
     .droparea:hover, .pickarea:hover { border-style:solid; opacity:1; }
